@@ -1,13 +1,13 @@
 numpy
 jsonschema >= 2.6.0
-rcsb.utils.io >= 0.54
+rcsb.utils.io >= 0.56
 rcsb.db >= 0.966
 rcsb.utils.chemref >= 0.33
 rcsb.utils.citation >= 0.15
 rcsb.utils.config >= 0.33
 rcsb.utils.ec >= 0.21
 rcsb.utils.go >= 0.17
-rcsb.utils.seq >= 0.38
+rcsb.utils.seq >= 0.40
 rcsb.utils.struct >= 0.24
 rcsb.utils.taxonomy >= 0.27
 statistics; python_version < "3.0"
